--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,5 +10,4 @@ spring.datasource.username=sa
 spring.jpa.hibernate.ddl-auto=create
 
 spring.h2.console.settings.web-allow-others=true
-
-
+springdoc.packages-to-scan=com.techzone.ecommerce.api.controller
